--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,29 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.4",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "reducer-utils": "^1.0.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-socket.io": "^1.4.0",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.57.1",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
+    "styled-components": "^5.3.6",
     "typeorm": "^0.3.11",
-    "typescript": "^4.9.3",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,4 +57,5 @@
       "last 1 safari version"
     ]
   }
+
 }
